# dependabot-demo

./: .gitignore
.github/: dependabot.yml
python/: pyproject.toml
python/project2/: pyproject.toml
python/project2/src/: main.py
