[project]
name = "project-name"
version = "0.0.1"
description = "TBD"
readme = "README.md"
requires-python = ">=3.14, <3.15"
dependencies = [
  "boto3>=1.41.2",
  "pydantic>=2.12.4",
  "boto3-stubs>=1.41.5",
]

[dependency-groups]
dev = [
    "colorlog>=6.10.1",
    "pytest>=9.0.1",
    "ruff>=0.14.6",
    "mypy>=1.18.2",
]

[tool.ruff]
lint.select = [
  "ALL", # include all the rules, including new ones
]
# lint.per-file-ignores = { "*_test.py" = ["S101", "PLR2004", "PLR6301"] }
lint.ignore = [
  "COM812",  # Trailing comma conflicts with formatter
  "CPY001", # Missing copyright notice at top of file
  "D100",   # Missing docstring in public module
  "D101",   # Missing docstring in public class
  "D102",   # Missing docstring in public method
  "D103",   # Missing docstring in public function
  "D107",   # Missing docstring in __init__
  "D203",    # One-blank-line-before-class conflicts with formatter
  "D211",   # No blank lines allowed before class docstring
  "D213",   # No blank lines allowed before method docstring
  "E266",   # Too many leading `#` before block comment
  "TRY002", # Create your own exception,
]
line-length = 100
preview = true
fix = true

[tool.mypy]
disallow_untyped_defs = true
exclude = [".*_test\\.py$"]
explicit_package_bases = true
files = ["src"]
plugins = ["pydantic.mypy"]
python_version = "3.14"
strict = true

# [[tool.mypy.overrides]]
# ignore_errors = true
# module = ".*_test\\.py$"

# [tool.pydantic-mypy]
# init_forbid_extra = true
# init_typed = true
# warn_required_dynamic_aliases = true
# warn_untyped_fields = true

# [tool.pytest.ini_options]
# cache_dir = "/tmp/.pytest_cache"
